[tool.poetry]
name = "erp"
version = "0.1.0"
description = "Basic erp system implementation for learning purposes"
authors = ["Elias Gill <eliasgill42@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
